--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CDA1Android"
         tools:targetApi="31">
+        <activity
+            android:name=".AccountCreationFormActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AccountCreationActivity"
+            android:exported="false" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
