--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,6 +65,9 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".DetailsFilmActivity"
+            android:exported="false"/>
+        <activity
             android:name=".ImageActivity"
             android:exported="false" />
         <activity
